--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0"
+    "next": "latest",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "@google/generative-ai": "^0.7.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
