--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "next": "latest",
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "@google/generative-ai": "^0.7.1"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "@google/genai": "1.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
