--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "@google/genai": "1.3.0"
+    "@google/genai": "1.3.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
